== Release 4.3.8.5

    * Fixed: PIC10F200 compile issues #65

== Release 4.3.8.4

    * Fixed: fix "Compile As" endless dialog show #60

    #59

== Release 4.3.8.3

    * Fixed: LDmicro goes into an endless loop if you try to display the dialog
    to set the DELAY delay when the mcu is not set to either AVR or PIC (#53)

    * Fixed: "Compile ANSIC" always generates a delay of 0 us no matter what
    delay value has been set for the DELAY instruction (#54)

    * Fixed: Some ArduinoPinName for ATmega2560

== Release 4.3.8.2

    * Hotfix: "Compile ANSIC" fails and LDmico exits with error dialogs when
      the CLRWDT instruction is used #49

== Release 4.3.8.1

    * Fixed: persist not execute #34
      INT_EEPROM_READ in AVR
      https://github.com/LDmicro/LDmicro/issues/34


== Release 4.3.8

    * Fixed: CTC counter set a size of var.

    * Fixed: ADC pin mapping for Arduino in ladder_.h.

    * Updated: SetBit, ClearBit, IfBitSet, IfBitClear.
      var must be a variable, not a literal value.
      The size of var must be from 1 to 4 bytes.
      bit can be a literal number or a variable.
      bit can have a value of 0-7 if sizeof(var) == 1 byte,
                             0-15 if sizeof(var) == 2 bytes,
                             0-23 if sizeof(var) == 3 bytes,
                             0-31 if sizeof(var) == 4 bytes.

      https://github.com/LDmicro/LDmicro/wiki/SetBit,-ClearBit,-IfBitSet,-IfBitClear-in-variable

    * Updated: Spanish locale. Thanks, Toni Tin.

    * Wiki: SPI: Serial Peripheral Interface
      https://github.com/LDmicro/LDmicro/wiki/SPI:-Serial-Peripheral-Interface

    * Wiki: Copy, paste, cut, etc
      https://github.com/LDmicro/LDmicro/wiki/Copy,-paste,-cut,-etc

== Release 4.3.7

    * Fixed: Atmega2560 pins name and Arduino Mega 2560 pins name.

    * Fixed: Atmega2560 9/10-bit PWM.

    * Fixed: ATmega328 9/10-bit PWM.

    * Fixed: ATmega8 9/10-bit PWM.

    * Fixed: PIC 9/10bits PWM LSBs.
