@@ -1,6 +1,8 @@
 == Release 4.3.8.5
 
-    * Fixed: PIC10F200 compile issues #65
+    * Fixed: PIC10F200 compile, issue #65
+
+    * Fixed: PWM no longer possible on 16F628a, issue #61
 
 == Release 4.3.8.4
 
